{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 197,
  "lineage": "8842d84a-40db-1c6c-977d-5a68fcb02b0d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:172607079965:subnet/subnet-8984e1e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-8984e1e1",
            "map_public_ip_on_launch": true,
            "owner_id": "172607079965",
            "state": "available",
            "vpc_id": "vpc-7f730417"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:172607079965:subnet/subnet-50d3622a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-50d3622a",
            "map_public_ip_on_launch": true,
            "owner_id": "172607079965",
            "state": "available",
            "vpc_id": "vpc-7f730417"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:172607079965:vpc/vpc-7f730417",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-897225e1",
            "default_route_table_id": "rtb-d16d4eb9",
            "default_security_group_id": "sg-1e336472",
            "dhcp_options_id": "dopt-e1b8f789",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-7f730417",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d16d4eb9",
            "owner_id": "172607079965"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dbe45195223e250b",
            "arn": "arn:aws:ec2:ca-central-1:172607079965:instance/i-06b85b81a39cfbea5",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "project-3-host",
            "id": "i-06b85b81a39cfbea5",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "microservices-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d326cc911ad208a8",
            "private_dns": "ip-172-31-26-238.ca-central-1.compute.internal",
            "private_ip": "172.31.26.238",
            "public_dns": "ec2-35-183-197-189.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.197.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-04a4c66c26c5b588f",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "project-3-common",
              "project-3-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8984e1e1",
            "tags": {
              "Name": "project-3-control_plane-1",
              "kubernetes.io/cluster/project-3": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e7def3ad1112df0",
              "sg-064cc5bd8bde7c0d4"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dbe45195223e250b",
            "arn": "arn:aws:ec2:ca-central-1:172607079965:instance/i-0e2febd6cb62d90fd",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "project-3-host",
            "id": "i-0e2febd6cb62d90fd",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "microservices-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0459cc60b21017784",
            "private_dns": "ip-172-31-12-186.ca-central-1.compute.internal",
            "private_ip": "172.31.12.186",
            "public_dns": "ec2-35-182-87-186.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.182.87.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-08a4578732227c030",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "project-3-common",
              "project-3-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-50d3622a",
            "tags": {
              "Name": "project-3-control_plane-2",
              "kubernetes.io/cluster/project-3": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e7def3ad1112df0",
              "sg-064cc5bd8bde7c0d4"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:loadbalancer/net/project-3-api-lb/86a1a6fa130fd5d5",
            "arn_suffix": "net/project-3-api-lb/86a1a6fa130fd5d5",
            "dns_name": "project-3-api-lb-86a1a6fa130fd5d5.elb.ca-central-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:loadbalancer/net/project-3-api-lb/86a1a6fa130fd5d5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "project-3-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-50d3622a"
              },
              {
                "subnet_id": "subnet-8984e1e1"
              }
            ],
            "subnets": [
              "subnet-50d3622a",
              "subnet-8984e1e1"
            ],
            "tags": {
              "Cluster": "project-3",
              "kubernetes.io/cluster/project-3": "shared"
            },
            "vpc_id": "vpc-7f730417",
            "zone_id": "Z2EPGBW3API2WT"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:listener/net/project-3-api-lb/86a1a6fa130fd5d5/f68e72355b901b0b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:targetgroup/project-3-api/6bf714c8b33250d1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:listener/net/project-3-api-lb/86a1a6fa130fd5d5/f68e72355b901b0b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:loadbalancer/net/project-3-api-lb/86a1a6fa130fd5d5",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:targetgroup/project-3-api/6bf714c8b33250d1",
            "arn_suffix": "targetgroup/project-3-api/6bf714c8b33250d1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:targetgroup/project-3-api/6bf714c8b33250d1",
            "lambda_multi_value_headers_enabled": false,
            "name": "project-3-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-7f730417"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:targetgroup/project-3-api/6bf714c8b33250d1-20191106181807778600000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:targetgroup/project-3-api/6bf714c8b33250d1",
            "target_id": "i-06b85b81a39cfbea5"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:targetgroup/project-3-api/6bf714c8b33250d1-20191106181807730100000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:targetgroup/project-3-api/6bf714c8b33250d1",
            "target_id": "i-0e2febd6cb62d90fd"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:targetgroup/project-3-api/6bf714c8b33250d1-20191106181807993600000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:172607079965:targetgroup/project-3-api/6bf714c8b33250d1",
            "target_id": "i-06b85b81a39cfbea5"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:172607079965:security-group/sg-064cc5bd8bde7c0d4",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064cc5bd8bde7c0d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "project-3-common",
            "name_prefix": null,
            "owner_id": "172607079965",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/project-3": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-7f730417"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:172607079965:security-group/sg-02e7def3ad1112df0",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-02e7def3ad1112df0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "project-3-control_planes",
            "name_prefix": null,
            "owner_id": "172607079965",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/project-3": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-7f730417"
          }
        }
      ]
    }
  ]
}